--- a/company/summary.html
+++ b/company/summary.html
@@ -1160,6 +1160,9 @@
               </li>
           </ul>
       </div>
+      <div class="privacy-policy">
+        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+      </div>
           <div class="copyright-tab">
               <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
               <div class="copyright-main">
