--- a/index/news.html
+++ b/index/news.html
@@ -25,7 +25,7 @@
                     <p class="logo-text">株式会社リライトホールディングス</p> 
                 </div>
                 <!-- <span class="material-icons" id="open-btn">menu</span> -->
-                <span class="material-icons" id="close-btn"
+                <span class="material-icons close-btn-text" id="close-btn"
                   >close</span
                 >
             </div>
@@ -585,6 +585,9 @@
                         </div>
               </li>
           </ul>
+      </div>
+      <div class="privacy-policy">
+        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
       </div>
           <div class="copyright-tab">
               <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
