--- a/company/group.html
+++ b/company/group.html
@@ -414,7 +414,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p class="logo-text">株式会社リライトホールディングス</p> 
                     </div>
                     <!-- <span class="material-icons" id="open-btn">menu</span> -->
-                    <span class="material-icons" id="close-btn"
+                    <span class="material-icons close-btn-text" id="close-btn"
                       >close</span
                     >
                 </div>
@@ -889,6 +889,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
     </ul>
 </div>
+<div class="privacy-policy">
+    <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+  </div>
+  <div class="privacy-policy">
+    <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+  </div>
     <div class="copyright-tab">
         <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
         <div class="copyright-main">
