--- a/company/group.html
+++ b/company/group.html
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                                         <div class="accordion-content">
                                           <a href="../company.html" class="index-more">-会社概要</a>
-                                            <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                                            <a href="../company/message.html" class="index-more">-代表挨拶</a>
                                             <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                             <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -550,7 +550,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </a>
             </li>
             <li class=" wp-block-navigation-item wp-block-navigation-link">
-                <a class="wp-block-navigation-item__content"  href="https://www.transit-web.com/company/top-message/"><span class="wp-block-navigation-item__label">トップメッセージ</span>
+                <a class="wp-block-navigation-item__content"  href="https://www.transit-web.com/company/top-message/"><span class="wp-block-navigation-item__label">代表挨拶</span>
                 </a>
             </li>
 
@@ -837,7 +837,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
                     <div class="accordion-content">
                         <a href="../company.html" class="index-more">-会社概要</a>
-                        <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                        <a href="../company/message.html" class="index-more">-代表挨拶</a>
                         <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                         <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -889,11 +889,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </li>
     </ul>
 </div>
-<div class="privacy-policy">
-    <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
-  </div>
+
   <div class="privacy-policy">
-    <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+    <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="../index/privacy-policy.html">プライバシーポリシー</a>
   </div>
     <div class="copyright-tab">
         <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
