--- a/company/summary.html
+++ b/company/summary.html
@@ -60,7 +60,7 @@
                         </div>
                                 <div class="accordion-content">
                                   <a href="../company.html" class="index-more">-会社概要</a>
-                                    <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                                    <a href="../company/message.html" class="index-more">-代表挨拶</a>
                                     <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -132,7 +132,7 @@
             </li>
             <li class=" wp-block-navigation-item wp-block-navigation-link">
               <a class="wp-block-navigation-item__content" href="https://www.transit-web.com/company/top-message/">
-                <span class="wp-block-navigation-item__label">トップメッセージ</span>
+                <span class="wp-block-navigation-item__label">代表挨拶</span>
               </a>
             </li>
           </div>
@@ -1108,7 +1108,7 @@
                   </div>
                           <div class="accordion-content">
                               <a href="../company.html" class="index-more">-会社概要</a>
-                              <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                              <a href="../company/message.html" class="index-more">-代表挨拶</a>
                               <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                               <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                               <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -1161,7 +1161,7 @@
           </ul>
       </div>
       <div class="privacy-policy">
-        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="../index/privacy-policy.html">プライバシーポリシー</a>
       </div>
           <div class="copyright-tab">
               <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
