--- a/company/message.html
+++ b/company/message.html
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                           </div>
                                   <div class="accordion-content">
                                     <a href="../company.html" class="index-more">-会社概要</a>
-                                      <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                                      <a href="../company/message.html" class="index-more">-代表挨拶</a>
                                       <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                       <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                       <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -549,7 +549,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top-message js-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">TOP MESSAGE</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">トップメッセージ</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
+<div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top-message js-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">TOP MESSAGE</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">代表挨拶</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
 <div class="wp-block-columns thd_top-message__content is-layout-flex wp-container-core-columns-is-layout-1 wp-block-columns-is-layout-flex wp-block-columns-message">
 <div class="wp-block-column thd_top-message__detail is-layout-flow wp-block-column-is-layout-flow">
 <h2 class="wp-block-heading is-style-plain thd_top-message__copy">テキストテキストテキスト<br class="--desktop">テキストテキスト<br>テキストテキストテキストテキストテキスト</h2>
@@ -657,7 +657,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
                   <div class="accordion-content">
                       <a href="../company.html" class="index-more">-会社概要</a>
-                      <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                      <a href="../company/message.html" class="index-more">-代表挨拶</a>
                       <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                       <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                       <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -710,7 +710,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ul>
 </div>
 <div class="privacy-policy">
-  <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+  <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="../index/privacy-policy.html">プライバシーポリシー</a>
 </div>
   <div class="copyright-tab">
       <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
