--- a/company/partnar.html
+++ b/company/partnar.html
@@ -58,7 +58,7 @@
                             </div>
                                     <div class="accordion-content">
                                       <a href="../company.html" class="index-more">-会社概要</a>
-                                        <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                                        <a href="../company/message.html" class="index-more">-代表挨拶</a>
                                         <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                         <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -168,7 +168,7 @@
 </a>
 <div class="group-name">
 <p>
-アイボヤージ
+株式会社アイ・ボヤージ 様
 </p>
 </div>
 </li>
@@ -213,7 +213,7 @@
                 </div>
                         <div class="accordion-content">
                             <a href="../company.html" class="index-more">-会社概要</a>
-                            <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                            <a href="../company/message.html" class="index-more">-代表挨拶</a>
                             <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                             <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -266,7 +266,7 @@
         </ul>
     </div>
     <div class="privacy-policy">
-        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
+        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="../index/privacy-policy.html">プライバシーポリシー</a>
       </div>
         <div class="copyright-tab">
             <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
