--- a/index.html
+++ b/index.html
@@ -3297,7 +3297,7 @@
                                                                     TOP<span class="--desktop"></span>
                                                                     <br class="--mobile">MESSAGE
                                                                 </p>
-                                                                <p class="title__jp thd_mod-arw__link --large --wh">メッセージ</p>
+                                                                <p class="title__jp thd_mod-arw__link --large --wh">代表挨拶</p>
                                                             </div>
                                                         </a>
                                                         <a class="thd_top__kv__lower__item --2" href="company.html">
