--- a/index/privacy-policy.html
+++ b/index/privacy-policy.html
@@ -425,6 +425,9 @@ piHostname = 'ma.jbci.co.jp';
 	else { window.addEventListener('load', async_load, false); }
 })();
 </script>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+<script src="../js/main.js"></script>
+<script src="../js/script.js"></script>
 </body>
 
 </html> 
