--- a/company/message.html
+++ b/company/message.html
@@ -569,7 +569,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_top-message__text__position">REWRITE HOLDINGS INC.<br>CEO</p>
+<p class="thd_top-message__text__position">REWRITE HOLDINGS INC.</p>
 
 
 
