--- a/index.html
+++ b/index.html
@@ -3449,7 +3449,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit smb-section--fit-vision thd_top__vision js-inview">
-                                                    <div class="smb-section__inner-home">
+                                                    <div class="smb-section__inner">
                                                         <div class="c-container">
                                                             <div class="smb-section__contents-wrapper">
                                                                 <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
