--- a/index.html
+++ b/index.html
@@ -2291,7 +2291,8 @@
                 margin-block-start: 0;}
 
             :root :where(.is-layout-flow) > :last-child {
-                margin-block-end: 0;}
+                margin-block-end: 0;
+                padding-top: 0;}
 
             :root :where(.is-layout-flow) > * {
                 margin-block-start: var(--_margin1);margin-block-end: 0;
