--- a/adoption.html
+++ b/adoption.html
@@ -61,7 +61,7 @@
                                     <div class="accordion-content">
                                         <a href="company.html" class="index-more">-会社概要</a>
                                         <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                        <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                        <a href="company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                                         <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                         <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                       </div>
@@ -208,7 +208,7 @@
                 <span class="m-h2ttl--ja">会社を知る</span>
                 <span class="m-h2ttl--en">About Company</span>
               </h2>
-              <p class="m-txt u-fw--bold u-fs--l">リライトホールディングスの<br>経営理念についてご紹介します。</p>
+              <p class="m-txt u-fw--bold u-fs--l">リライトホールディングスの<br>経営理念&企業理念についてご紹介します。</p>
               <div class="m-arrowBtn m-arrowBtn--sizeS m-arrowBtn--mt40">
                 <a class="m-arrowBtn-hover" href="adoption/about-company.html">もっと見る</a>
               </div>
@@ -225,7 +225,7 @@
         <p class="p-recruit__checkTtl">こちらもチェック！</p>
         <ul class="p-recruit__checkList">
           <li class="p-recruit__checkListItem">
-            <a href="/company/mission/">グループミッション・経営理念</a>
+            <a href="/company/mission/">グループミッション・経営理念&企業理念</a>
           </li>
           <li class="p-recruit__checkListItem">
             <a href="/business/strategy/">グループ連邦経営について</a>
@@ -578,7 +578,7 @@
                     <div class="accordion-content">
                         <a href="company.html" class="index-more">-会社概要</a>
                         <a href="company/message.html" class="index-more">-代表挨拶</a>
-                        <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                        <a href="company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                         <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                         <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                       </div>
