--- a/company/summary.html
+++ b/company/summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>経営理念</title>
+    <title>経営理念&企業理念</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
                                 <div class="accordion-content">
                                   <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                                     <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
@@ -1109,7 +1109,7 @@
                           <div class="accordion-content">
                               <a href="../company.html" class="index-more">-会社概要</a>
                               <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                              <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                              <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                               <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                               <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                             </div>
