--- a/adoption/executive.html
+++ b/adoption/executive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>経営理念</title>
+    <title>経営理念&企業理念</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../css/specimen.css">
     <link rel="stylesheet" href="../css/transit1.css">
@@ -59,7 +59,7 @@
                                 <div class="accordion-content">
                                   <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                                     <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
@@ -459,7 +459,7 @@
                         <div class="accordion-content">
                             <a href="../company.html" class="index-more">-会社概要</a>
                             <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                            <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                            <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                             <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                           </div>
