--- a/company/message.html
+++ b/company/message.html
@@ -448,7 +448,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <div class="accordion-content">
                                     <a href="../company.html" class="index-more">-会社概要</a>
                                       <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                      <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                      <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                                       <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                       <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                     </div>
@@ -658,7 +658,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <div class="accordion-content">
                       <a href="../company.html" class="index-more">-会社概要</a>
                       <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                      <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                      <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                       <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                       <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                     </div>
