--- a/company/mission.html
+++ b/company/mission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>グループビジョン・経営理念</title>
+    <title>グループビジョン・経営理念&企業理念</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../css/specimen.css">
     <link rel="stylesheet" href="../css/transit1.css">
@@ -59,7 +59,7 @@
                                 <div class="accordion-content">
                                   <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                                     <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
@@ -130,7 +130,7 @@
         <div class="m-kv m-kv--mission">
           <div class="m-kv__inner">
             <h1 class="m-kv__ttl">
-              <span class="m-kv__ttl--ja">グループビジョン・<br class="u-spi">経営理念</span>
+              <span class="m-kv__ttl--ja">グループビジョン・<br class="u-spi">経営理念&企業理念</span>
               <span class="m-kv__ttl--en">Group Vision &amp; Management Philosophy</span>
             </h1>
           </div>
@@ -147,7 +147,7 @@
               <a href="/company/">会社情報</a>
             </li>
             <li class="m-breadcrumb__listItem">
-              <a href="/company/mission/">グループビジョン・経営理念</a>
+              <a href="/company/mission/">グループビジョン・経営理念&企業理念</a>
             </li>
           </ul>
         </div> -->
@@ -189,7 +189,7 @@
             <div class="l-section">
               <div class="l-contents__inner">
                 <h2 class="m-h2ttl m-h2ttl--mb">
-                  <span class="m-h2ttl--ja">経営理念</span>
+                  <span class="m-h2ttl--ja">経営理念&企業理念</span>
                   <span class="m-h2ttl--en">Management Philosophy</span>
                 </h2>
               </div>
@@ -242,7 +242,7 @@
                         <div class="accordion-content">
                             <a href="../company.html" class="index-more">-会社概要</a>
                             <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                            <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                            <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
                             <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                           </div>
