--- a/company/message.html
+++ b/company/message.html
@@ -329,6 +329,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 rel="stylesheet">
               <link rel="stylesheet" href="../css/style.css">
               <link rel="stylesheet" href="../css/form.css">
+              <link rel="stylesheet" href="../css/message.css">
               <link rel="icon" href="../img/Rewrite_logo_only.png" type="image/png">
 				</head>
 
@@ -544,7 +545,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav"><ul class="wp-block-navigation__container items-justified-center wp-block-navigation"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#exective-members"><span class="wp-block-navigation-item__label">グループ役員</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span></a></li><li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/message.html" aria-current="page"><span class="wp-block-navigation-item__label">代表挨拶</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/mission.html"><span class="wp-block-navigation-item__label">ビジョン</span></a></li></ul></nav>
+<nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex message-items" aria-label="companyNav"><ul class="wp-block-navigation__container items-justified-center wp-block-navigation"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#exective-members"><span class="wp-block-navigation-item__label">グループ役員</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span></a></li><li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/message.html" aria-current="page"><span class="wp-block-navigation-item__label">代表挨拶</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/mission.html"><span class="wp-block-navigation-item__label">ビジョン</span></a></li></ul></nav>
 
 
 
@@ -580,7 +581,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <div class="wp-block-column thd_top-message__img is-layout-flow wp-block-column-is-layout-flow">
-<figure class="wp-block-image size-large thd_top-message__img__dt"><img fetchpriority="high" decoding="async" width="782" height="1024" src="https://placehold.jp/375x300.png" alt="代表取締役社長 CEO　中村 貞裕" class="wp-image-613"  sizes="(max-width: 782px) 100vw, 782px" /></figure>
+<figure class="wp-block-image size-large thd_top-message__img__dt"><img fetchpriority="high" class="message-img" decoding="async" width="782" height="1024" src="https://placehold.jp/375x300.png" alt="代表取締役社長 CEO　中村 貞裕" class="wp-image-613"  sizes="(max-width: 782px) 100vw, 782px" /></figure>
 
 
 
