--- a/company/mission.html
+++ b/company/mission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>グループビジョン・経営理念&企業理念</title>
+    <title>ビジョン・経営理念&企業理念</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../css/specimen.css">
     <link rel="stylesheet" href="../css/transit1.css">
@@ -59,7 +59,8 @@
                                 <div class="accordion-content">
                                   <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                    <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                    <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                     <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
@@ -168,16 +169,31 @@
                   </p>
                 </div>
                 <div class="l-sectionLv2">
+
+
                   <p class="m-txt u-fs--ls u-tac--pc u-fw--pcbold">
-                    一人では難しい挑戦も、仲間たちとの協力によって乗り越え多くの企業や事業を世に創出し続けます。
+                    Rewrite was born from a deep conviction: that a truly just society must honor sincere effort and eradicate senseless injustice.
                     <br>
-                    <br><br class="u-pci">ベンチャー企業は、しばしば嵐や波にさらされる小さなイカダのようなものです。変動する市場の波を乗り越え、持続可能な成果を生み出す強さと堅牢さを兼ね備えた安定した大船を築くことを目指します。<br>
+                    <br><br class="u-pci">Our founding team has endured the painful consequences of a world riddled with fraud, inflated prices, false promises, and betrayal.<br>
                     <br>
-                    夢を現実に変える力を持つこの船で私たちは共に乗り込む仲間たちと力を合わせて航海を続け世界中の人々に夢と希望の灯をともします。
-                    <!-- <br class="u-pci">ともに料理やサービスの新しい価値を創ることにチャレンジする。そして、その先には、自分たち自身だけでなく、<br class="u-pci">お客様や地域社会といった関わる全ての人々が、わくわくする驚くような食の未来が待っています。<br>
-                    <br>
+                    It is precisely because we have faced these injustices ourselves that we are unwavering in our mission—to deliver only authentic, high-value services that empower every client to choose with certainty, not fear.<br><br>
+                    <br class="u-pci">We envision a society where integrity triumphs over deceit, where no one sheds tears for losses they never deserved, and where those who strive earnestly are not overlooked, but celebrated.<br><br><br class="u-pci">This is not just our philosophy—it is the reason Rewrite exists.<br>
+                    <!-- <br>
                     当社グループは、このグループミッションのもと、サステナブルに成長する企業グループとして、<br class="u-pci">豊かな食生活への貢献を目指してまいります。 -->
                   </p>
+
+                  <p class="m-txt u-fs--ls u-tac--pc u-fw--pcbold">
+                    リライトグループは、真に公正な社会とは、誠実な努力を尊重し、無意味な不正を根絶しなければならないという深い信念から生まれました。
+                    <br>
+                    <br><br class="u-pci">私たちの創業チームは、詐欺、価格の高騰、偽りの約束、そして裏切りが蔓延する世界の痛ましい結末に耐え抜いてきました。<br>
+                    <br>
+                   
+                    私たち自身がこうした不正に直面してきたからこそ、私たちは揺るぎない使命を貫くことができます。それは、すべてのお客様が恐れることなく、確信を持って選択できるよう、真摯で価値の高いサービスのみを提供することです。<br><br>
+                    <br class="u-pci">私たちが思い描く社会は、誠実さが欺瞞に打ち勝ち、不当な損失に涙を流す人がいない社会、そして真摯に努力する人々が見過ごされるのではなく、称賛される社会です。<br><br><br class="u-pci">これは単なる私たちの哲学ではなく、Rewriteが存在する理由です。<br>
+                    <!-- <br>
+                    当社グループは、このグループミッションのもと、サステナブルに成長する企業グループとして、<br class="u-pci">豊かな食生活への貢献を目指してまいります。 -->
+                  </p>
+                
                 </div>
               </div>
             </div>
@@ -195,11 +211,20 @@
               </div>
               <div class="m-box">
                 <ul class="m-list m-list--disc m-list--margin u-fs--ls u-fw--pcbold">
+                  <p class="m-txt u-fs--ls u-tac--pc u-fw--pcbold">
+                    一人では難しい挑戦も、仲間たちとの協力によって乗り越え多くの企業や事業を世に創出し続けます。
+                    <br>
+                    <br><br class="u-pci">ベンチャー企業は、しばしば嵐や波にさらされる小さなイカダのようなものです。変動する市場の波を乗り越え、持続可能な成果を生み出す強さと堅牢さを兼ね備えた安定した大船を築くことを目指します。<br>
+                    <br>
+                    夢を現実に変える力を持つこの船で私たちは共に乗り込む仲間たちと力を合わせて航海を続け世界中の人々に夢と希望の灯をともします。
+                    <!-- <br class="u-pci">ともに料理やサービスの新しい価値を創ることにチャレンジする。そして、その先には、自分たち自身だけでなく、<br class="u-pci">お客様や地域社会といった関わる全ての人々が、わくわくする驚くような食の未来が待っています。<br>
+                    <br>
+                    当社グループは、このグループミッションのもと、サステナブルに成長する企業グループとして、<br class="u-pci">豊かな食生活への貢献を目指してまいります。 -->
+                  </p>
+                  <!-- <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li>
                   <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li>
                   <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li>
-                  <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li>
-                  <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li>
-                  <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li>
+                  <li class="m-list__item">テキストテキストテキストテキストテキストテキストテキスト</li> -->
                 </ul>
               </div>
             </div>
@@ -242,7 +267,8 @@
                         <div class="accordion-content">
                             <a href="../company.html" class="index-more">-会社概要</a>
                             <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                            <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                            <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                            <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
                             <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                           </div>
