--- a/company/summary.html
+++ b/company/summary.html
@@ -61,7 +61,8 @@
                                 <div class="accordion-content">
                                   <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                    <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                    <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                     <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
@@ -1109,7 +1110,8 @@
                           <div class="accordion-content">
                               <a href="../company.html" class="index-more">-会社概要</a>
                               <a href="../company/message.html" class="index-more">-代表挨拶</a>
-                              <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                              <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                              <a href="../company.html#exective-members" class="index-more">-グループ役員一覧</a>
                               <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                               <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                             </div>
