--- a/index.html
+++ b/index.html
@@ -3164,7 +3164,8 @@
                                             <div class="accordion-content">
                                                 <a href="company.html" class="index-more">-会社概要</a>
                                                 <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                                <a href="company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                                <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                                <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                                 <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                               </div>
@@ -3324,7 +3325,18 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                                <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top__news js-inview news-background">
+
+
+
+
+                                                <section class="news-section">
+                                                    <iframe src="https://rewrite-hd.com/news/" width="100%" height="600" style="border:none;"></iframe>
+                                                  </section>
+
+
+
+
+                                                <!-- <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top__news js-inview news-background">
                                                     <div class="smb-section__inner">
                                                         <div class="c-container">
                                                             <div class="smb-section__contents-wrapper">
@@ -3448,7 +3460,9 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div> -->
+
+
                                                 <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit smb-section--fit-vision thd_top__vision js-inview">
                                                     <div class="smb-section__inner-home">
                                                         <div class="c-container">
@@ -3505,7 +3519,7 @@
                                                                 </div>
                                                                 <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
                                                                     <h3 class="wp-block-heading js-inview">
-                                                                        リライトホールディングスは、<br class="--mobile">
+                                                                        リライトグループは<br class="--mobile">
                                                                         グループ各社の経営を担う為、<br>大きく3つの主要事業で構成されています。
                                                                     </h3>
                                                                     <div id="js-thd_top__business__items" class="thd_top__business__items js-inview">
@@ -3562,7 +3576,7 @@
                                                                 <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
                                                                     <p class="thd_top__group__lead">
                                                                         <!-- ライフスタイルオペレーション<br class="--mobile"> -->
-                                                                        リライトホールディングスグループは<br>
+                                                                        リライトグループは<br>
                                                                         <!-- 多種多様な事業がグループにある事で<br> -->
                                                                         全てのクライアントにとって、<br class="--mobile">価値あるサービスを提供し続けます。
                                                                     </p>
@@ -3668,7 +3682,8 @@
                                 <div class="accordion-content">
                                     <a href="company.html" class="index-more">-会社概要</a>
                                     <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                    <a href="company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                    <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                    <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                     <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
