--- a/index/vision.html
+++ b/index/vision.html
@@ -58,7 +58,8 @@
                             </div>
                                     <div class="accordion-content">
                                         <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
-                                        <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                        <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                        <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                         <a href="../company.html" class="index-more">-会社概要</a>
                                         <a href="../company.html#group-companys" class="index-more">-グループ会社一覧</a>
                                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -161,7 +162,8 @@
                 </div>
                         <div class="accordion-content">
                             <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
-                            <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                            <a href="../company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                            <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                             <a href="../company.html" class="index-more">-会社概要</a>
                             <a href="../company.html#group-companys" class="index-more">-グループ会社一覧</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
