--- a/inquiry.html
+++ b/inquiry.html
@@ -51,7 +51,8 @@
                                         <div class="accordion-content">
                                             <a href="company/summary.html" class="index-more">-会社概要</a>
                                             <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                            <a href="company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                            <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                            <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                             <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                             <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                           </div>
@@ -123,7 +124,8 @@
                             <div class="accordion-content">
                                 <a href="company/summary.html" class="index-more">-会社概要</a>
                                 <a href="company/message.html" class="index-more">-代表挨拶</a>
-                                <a href="company/mission.html" class="index-more">-グループビジョン・経営理念&企業理念</a>
+                                <a href="company/mission.html" class="index-more">-ビジョン・経営理念&企業理念</a>
+                                <a href="company.html#exective-members" class="index-more">-グループ役員一覧</a>
                                 <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                               </div>
