--- a/company/mission.html
+++ b/company/mission.html
@@ -189,7 +189,7 @@
                     <br>
                    
                     私たち自身がこうした不正に直面してきたからこそ、私たちは揺るぎない使命を貫くことができます。それは、すべてのお客様が恐れることなく、確信を持って選択できるよう、真摯で価値の高いサービスのみを提供することです。<br><br>
-                    <br class="u-pci">私たちが思い描く社会は、誠実さが欺瞞に打ち勝ち、不当な損失に涙を流す人がいない社会、そして真摯に努力する人々が見過ごされるのではなく、称賛される社会です。<br><br><br class="u-pci">これは単なる私たちの哲学ではなく、Rewriteが存在する理由です。<br>
+                    <br class="u-pci">私たちが思い描く社会は、誠実さが欺瞞に打ち勝ち、不当な損失に涙を流す人がいない社会、そして真摯に努力する人々が見過ごされるのではなく、称賛される社会です。<br><br><br class="u-pci">これは単なる私たちの哲学ではなく、リライトグループが存在する理由です。<br>
                     <!-- <br>
                     当社グループは、このグループミッションのもと、サステナブルに成長する企業グループとして、<br class="u-pci">豊かな食生活への貢献を目指してまいります。 -->
                   </p>
