--- a/company/message.html
+++ b/company/message.html
@@ -510,7 +510,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
   </header>
 
-		<div class="l-contents" role="document">
+		<div class="l-contents l-contents-message" role="document">
 			
 			
 			
