--- a/business.html
+++ b/business.html
@@ -3285,7 +3285,7 @@
                                                                 <div class="wp-block-columns is-layout-flex wp-container-core-columns-is-layout-2 wp-block-columns-is-layout-flex">
                                                                     <div class="wp-block-column thd_our_business__sec__img is-layout-flow wp-block-column-is-layout-flow">
                                                                         <figure class="wp-block-image size-large">
-                                                                            <img fetchpriority="high" decoding="async" width="1024" height="697" src="img/group_unification.png" alt="" class="wp-image-1489"  sizes="(max-width: 1024px) 100vw, 1024px"/>
+                                                                            <img fetchpriority="high" decoding="async" width="1024" height="697" src="img/group_unification.png" alt="" class="wp-image-1489 business-img"  sizes="(max-width: 1024px) 100vw, 1024px"/>
                                                                         </figure>
                                                                     </div>
                                                                     <div class="wp-block-column js-inview is-layout-flow wp-block-column-is-layout-flow">
@@ -3322,7 +3322,7 @@
                                                                 <div class="wp-block-columns is-layout-flex wp-container-core-columns-is-layout-5 wp-block-columns-is-layout-flex">
                                                                     <div class="wp-block-column thd_our_business__sec__img is-layout-flow wp-block-column-is-layout-flow">
                                                                         <figure class="wp-block-image size-large">
-                                                                            <img decoding="async" width="1024" height="697" src="img/incubation.png" alt="" class="wp-image-1491"  sizes="(max-width: 1024px) 100vw, 1024px"/>
+                                                                            <img decoding="async" width="1024" height="697" src="img/incubation.png" alt="" class="wp-image-1491 business-img"  sizes="(max-width: 1024px) 100vw, 1024px"/>
                                                                         </figure>
                                                                     </div>
                                                                     <div class="wp-block-column js-inview is-layout-flow wp-block-column-is-layout-flow">
@@ -3396,7 +3396,7 @@
                                                                 <div class="wp-block-columns is-layout-flex wp-container-core-columns-is-layout-7 wp-block-columns-is-layout-flex">
                                                                     <div class="wp-block-column thd_our_business__sec__img is-layout-flow wp-block-column-is-layout-flow">
                                                                         <figure class="wp-block-image size-large">
-                                                                            <img loading="lazy" decoding="async" width="1024" height="697" src="img/development.png" alt="" class="wp-image-1490"  sizes="auto, (max-width: 1024px) 100vw, 1024px"/>
+                                                                            <img loading="lazy" decoding="async" width="1024" height="697" src="img/development.png" alt="" class="wp-image-1490 business-img"  sizes="auto, (max-width: 1024px) 100vw, 1024px"/>
                                                                         </figure>
                                                                     </div>
                                                                     <div class="wp-block-column js-inview is-layout-flow wp-block-column-is-layout-flow">
