--- a/company/mission.html
+++ b/company/mission.html
@@ -124,8 +124,35 @@
       <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_mod-lower_header"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h1 class="smb-section__title">COMPANY</h1><div class="smb-section__lede-wrapper"><div class="smb-section__lede">会社情報</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained"></div></div></div></div></div>
 
 
+      <nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav">
+        <ul class="wp-block-navigation__container items-justified-center wp-block-navigation">
+          <div class="contents-upper">
+            
+            <li class=" wp-block-navigation-item wp-block-navigation-link">
+              <a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span>
+              </a>
+            </li>
+            <li class=" wp-block-navigation-item wp-block-navigation-link">
+              <a class="wp-block-navigation-item__content" href="../company.html#exective-members"><span class="wp-block-navigation-item__label">グループ役員</span>
+              </a>
+            </li>
+            <li class=" wp-block-navigation-item wp-block-navigation-link">
+              <a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span>
+              </a>
+            </li>
+          </div>
+          <div class="contents-lower">
 
-      <nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav"><ul class="wp-block-navigation__container items-justified-center wp-block-navigation"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#exective-members"><span class="wp-block-navigation-item__label">グループ役員</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/message.html"><span class="wp-block-navigation-item__label">代表挨拶</span></a></li><li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/mission.html" aria-current="page"><span class="wp-block-navigation-item__label">ビジョン</span></a></li></ul></nav>
+            <li class=" wp-block-navigation-item wp-block-navigation-link">
+              <a class="wp-block-navigation-item__content" href="../company/message.html"><span class="wp-block-navigation-item__label">代表挨拶</span>
+              </a>
+            </li>
+            <li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/mission.html" aria-current="page"><span class="wp-block-navigation-item__label">ビジョン</span>
+            </a>
+          </li>
+          </div>
+      </ul>
+    </nav>
 
         <!-- kv -->
         <div class="m-kv m-kv--mission">
